adding quick links to projects

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </nav>
     <div class="contain">
       <img src="Images\SOTTR_Wallpaper_9_1920_1080.jpg" width=100%>
-      <div class="centered">We are a rocket team from University of Limerick</div>
+      <h1 class="centered">ULAS HiPER</h1>
     </div> 
     <div class="section">
       <h1>About</h1>
@@ -27,13 +27,19 @@
       <h1>Projects</h1>
       <div class="grid">
         <div>
+          <a href="projects.html#Shinin">
           <img src="Images/Profile_2.jpg" width=100%>
+          </a>
         </div>
         <div>
+          <a href="projects.html#Mach24">
           <img src="Images/Profile_8.jpg" width=100%>
+          </a>
         </div>
         <div>
+          <a href="projects.html#Euroc">
           <img src="Images/Profile_10.jpg" width=100%>
+          </a>
         </div>
       </div>
     </div>
