--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
     <main class="container-fluid">
       <h1>Our Projects</h1>
     </main>
-    <article>
+    <article id="Shinin">
         <div class="grid">
             <div>
                 <h3>Shinin</h3>
@@ -29,7 +29,7 @@
             </div>
         </div>
     </article>
-    <div class="grid">
+    <div class="grid" id="Mach24">
         <div>
             <img src="Images/Profile_8.jpg" width=500 style="padding-left: 30px">
         </div>
@@ -38,7 +38,7 @@
             Our first high powered rocket competition.
         </div>
     </div>
-    <article>
+    <article id="Euroc">
         <div class="grid">
             <div>
                 <h3>Euroc</h3>
