added contact page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title> ULAS HiPER</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+    
 </head>
 <body>
   <nav class="container-fluid">
@@ -27,7 +28,7 @@
       <h1>Projects</h1>
       <div class="grid">
         <div>
-          <a href="projects.html#Shinin">
+          <a href="projects.html#Sionna">
           <img src="Images/Profile_2.jpg" width=100%>
           </a>
         </div>
