--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <head>
     <title> ULAS HiPER</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+    
 </head>
 <body>
   <nav class="container-fluid">
@@ -17,10 +19,10 @@
     <main class="container-fluid">
       <h1>Our Projects</h1>
     </main>
-    <article id="Shinin">
+    <article id="Sionna">
         <div class="grid">
             <div>
-                <h3>Shinin</h3>
+                <h3>Sionna</h3>
                 Our first high powered rocket.
 
             </div>
@@ -49,5 +51,16 @@
             </div>
         </div>
     </article>
+    <div class="section">
+        <h1 style="padding-left:45%">Get Involved</h1>
+  
+        <div class="grid">
+          <div style="padding-left: 40%;"><a href="#" role="button">Sponsor Us</a></div>
+          <div style="padding-left: 40%;"><a href="#" role="button">Become a member</a></div>
+          <div style="padding-left: 40%;"><a href="#" role="button">Open Positions</a></div>
+        </div>
+        <br>
+        <br>
+    </div>
 </body>
 </html>
