Added about and jobs

--- a/contact.html
+++ b/contact.html
@@ -19,23 +19,36 @@
       </nav>
     <h1 style="padding: 30px;">Get Involved</h1>
     <div class="section">
-    <h2>Our Teams</h2>
-    <div class="grid">
-        <div style="padding-left: 40%;">
-            Mechanics
-            <br>
-            <i style="font-size: 40px;padding-left: 20%" class="bi bi-rocket-takeoff-fill"></i> 
-        </div>
-        <div style="padding-left: 40%;">
-            Data
-            <br>
-            <i style="font-size: 40px;padding-left: 20%" class="bi bi-code-slash"></i> 
-        </div>
-        <div style="padding-left: 40%;">Electronics  <br> <i style="font-size: 40px;padding-left: 20%" class="bi bi-cpu"></i></div>
-        <div style="padding-left: 40%;">Operations <br>
-            <i style="font-size: 40px;padding-left: 20%;" class="bi bi-tools"></i>
+        <div class="job">
+           <h2>Working on data team</h2>
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu turpis egestas pretium aenean pharetra magna ac placerat vestibulum. Eu consequat ac felis donec et odio pellentesque diam volutpat. Ac auctor augue mauris augue neque gravida in fermentum et. Enim eu turpis egestas pretium aenean pharetra. Vulputate odio ut enim blandit volutpat maecenas volutpat blandit aliquam. Dolor magna eget est lorem ipsum dolor. Est placerat in egestas erat imperdiet sed euismod nisi. Urna porttitor rhoncus dolor purus. Enim nec dui nunc mattis enim ut tellus. Ultrices gravida dictum fusce ut placerat orci. Nibh ipsum consequat nisl vel.
+           <br><br>
+           <a href="#" role="button">Apply</a>
         </div>
     </div>
+    <div class="section">
+        <div class="job">
+           <h2>Working on data team</h2>
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu turpis egestas pretium aenean pharetra magna ac placerat vestibulum. Eu consequat ac felis donec et odio pellentesque diam volutpat. Ac auctor augue mauris augue neque gravida in fermentum et. Enim eu turpis egestas pretium aenean pharetra. Vulputate odio ut enim blandit volutpat maecenas volutpat blandit aliquam. Dolor magna eget est lorem ipsum dolor. Est placerat in egestas erat imperdiet sed euismod nisi. Urna porttitor rhoncus dolor purus. Enim nec dui nunc mattis enim ut tellus. Ultrices gravida dictum fusce ut placerat orci. Nibh ipsum consequat nisl vel.
+           <br><br>
+           <a href="#" role="button">Apply</a>
+        </div>
+    </div>
+    <div class="section">
+        <div class="job">
+           <h2>Working on data team</h2>
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu turpis egestas pretium aenean pharetra magna ac placerat vestibulum. Eu consequat ac felis donec et odio pellentesque diam volutpat. Ac auctor augue mauris augue neque gravida in fermentum et. Enim eu turpis egestas pretium aenean pharetra. Vulputate odio ut enim blandit volutpat maecenas volutpat blandit aliquam. Dolor magna eget est lorem ipsum dolor. Est placerat in egestas erat imperdiet sed euismod nisi. Urna porttitor rhoncus dolor purus. Enim nec dui nunc mattis enim ut tellus. Ultrices gravida dictum fusce ut placerat orci. Nibh ipsum consequat nisl vel.
+           <br><br>
+           <a href="#" role="button">Apply</a>
+        </div>
+    </div>
+    <div class="section">
+        <div class="job">
+           <h2>Working on data team</h2>
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu turpis egestas pretium aenean pharetra magna ac placerat vestibulum. Eu consequat ac felis donec et odio pellentesque diam volutpat. Ac auctor augue mauris augue neque gravida in fermentum et. Enim eu turpis egestas pretium aenean pharetra. Vulputate odio ut enim blandit volutpat maecenas volutpat blandit aliquam. Dolor magna eget est lorem ipsum dolor. Est placerat in egestas erat imperdiet sed euismod nisi. Urna porttitor rhoncus dolor purus. Enim nec dui nunc mattis enim ut tellus. Ultrices gravida dictum fusce ut placerat orci. Nibh ipsum consequat nisl vel.
+           <br><br>
+           <a href="#" role="button">Apply</a>
+        </div>
     </div>
 </body>
 </html>
