--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,25 @@
           <li><a href="contact.html">Get Involved</a></li>
         </ul>
       </nav>
-    <h1 style="padding: 30px;">Get Involved</h1>
+    <h1 class="section">Get Involved</h1>
+    <div class="section" id="sponsor">
+        <h2>Sponsor Us</h2>
+        <p>We are always looking for sponosr to help us</p>
+        <p>Please contact us at</p>
+        <button>email@email.com</button>
+    </div>
+    <article>
+    <div class="section" id="ulwoves">
+        <h2>Join UL Aerosoc</h2>
+        <p> We are always looking for new members</p>
+        <a href="https://ulwolves.ie/society/aeronautical" role="button">Join Here</a>
+    </div>
+    </article>
+    <div class="section" id="jobs">
+        <h2>Jobs</h2>
+        <p>We are looking for members to join our rocke team</p>
+    <details>
+        <summary><strong>Job Listings</strong></summary>
     <div class="section">
         <div class="job">
            <h2>Working on data team</h2>
@@ -49,6 +67,8 @@
            <br><br>
            <a href="#" role="button">Apply</a>
         </div>
+    </div>
+    </details>
     </div>
 </body>
 </html>
