--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title> ULAS HiPER</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body>
   <nav class="container-fluid">
@@ -45,13 +45,20 @@
       </div>
     </div>
     <article>
-      <h1 style="padding-left:45%">Get Involved</h1>
-
+      <div class="center"><h1>Get Involved</h1></div>
       <div class="grid">
-        <div style="padding-left: 40%;"><a href="#" role="button">Sponsor Us</a></div>
-        <div style="padding-left: 40%;"><a href="#" role="button">Become a member</a></div>
-        <div style="padding-left: 40%;"><a href="#" role="button">Open Positions</a></div>
+        <div><div class="center"><a href="contact.html#sponsor" role="button">Sponsor Us</a></div></div>
+        <div><div class="center"><a href="contact.html#ulwolves" role="button">Become a member</a></div></div>
+        <div><div class="center"><a href="contact.html#jobs" role="button">Open Positions</a></div></div>      
       </div>
     </article>
+    <footer>
+      <div class="section">
+        <div class="center">
+        <a href="https://www.instagram.com/ulaerosoc/"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/company/ulas-hipr/"><i class="bi bi-linkedin"></i></a>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
