--- a/about.html
+++ b/about.html
@@ -21,20 +21,10 @@
     <div class="section">
     <h2>Our Teams</h2>
     <div class="grid">
-        <div style="padding-left: 40%;">
-            Mechanics
-            <br>
-            <i style="font-size: 40px;padding-left: 20%" class="bi bi-rocket-takeoff-fill"></i> 
-        </div>
-        <div style="padding-left: 40%;">
-            Data
-            <br>
-            <i style="font-size: 40px;padding-left: 20%" class="bi bi-code-slash"></i> 
-        </div>
-        <div style="padding-left: 40%;">Electronics  <br> <i style="font-size: 40px;padding-left: 20%" class="bi bi-cpu"></i></div>
-        <div style="padding-left: 40%;">Operations <br>
-            <i style="font-size: 40px;padding-left: 20%;" class="bi bi-tools"></i>
-        </div>
+        <div><div class="job"><div class="center"><h3>Mechanics  </h3><i class="bi bi-rocket-takeoff-fill"></i></div></div></div>
+        <div><div class="job"><div class="center"><h3>Data       </h3><i class="bi bi-code-slash"></i></div></div></div>
+        <div><div class="job"><div class="center"><h3>Electronics</h3><i class="bi bi-cpu"></i></div></div></div>
+        <div><div class="job"><div class="center"><h3>Operations </h3><i class="bi bi-tools"></i></div></div></div>
     </div>
     </div>
 </body>
