--- a/about.html
+++ b/about.html
@@ -27,5 +27,14 @@
         <div><div class="job"><div class="center"><h3>Operations </h3><i class="bi bi-tools"></i></div></div></div>
     </div>
     </div>
+    <footer>
+      <div class="section">
+        <div style="float: left; position: absolute;">Website created with <a href="picocss.com">Pico.css</a></div>
+        <div class="center">
+        <a href="https://www.instagram.com/ulaerosoc/"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/company/ulas-hipr/"><i class="bi bi-linkedin"></i></a>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
