--- a/projects.html
+++ b/projects.html
@@ -62,5 +62,14 @@
         <br>
         <br>
     </div>
+    <footer>
+        <div class="section">
+          <div style="float: left; position: absolute;">Website created with <a href="picocss.com">Pico.css</a></div>
+          <div class="center">
+          <a href="https://www.instagram.com/ulaerosoc/"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.linkedin.com/company/ulas-hipr/"><i class="bi bi-linkedin"></i></a>
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
