--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
     <footer>
       <div class="section">
         <div style="float: left; position: absolute;">Website created with <a href="https://www.picocss.com">Pico.css</a></div>
+        <div style="padding-left:80%; position: absolute;">Created by  <a href="https://github.com/Derv6464">Dervla Gargan</a></div>
         <div class="center">
         <a href="https://www.instagram.com/ulaerosoc/"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/company/ulas-hipr/"><i class="bi bi-linkedin"></i></a>
