--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
         <button>email@email.com</button>
     </div>
     <article>
-    <div class="section" id="ulwoves">
+    <div class="section" id="ulwolves">
         <h2>Join UL Aerosoc</h2>
         <p> We are always looking for new members</p>
         <a href="https://ulwolves.ie/society/aeronautical" role="button">Join Here</a>
