--- a/projects.html
+++ b/projects.html
@@ -51,26 +51,22 @@
             </div>
         </div>
     </article>
-    <div class="section">
-        <h1 style="padding-left:45%">Get Involved</h1>
-  
-        <div class="grid">
-          <div style="padding-left: 40%;"><a href="#" role="button">Sponsor Us</a></div>
-          <div style="padding-left: 40%;"><a href="#" role="button">Become a member</a></div>
-          <div style="padding-left: 40%;"><a href="#" role="button">Open Positions</a></div>
-        </div>
-        <br>
-        <br>
+    <div class="center"><h1>Get Involved</h1></div>
+    <div class="grid">
+      <div><div class="center"><a href="contact.html#sponsor" role="button">Sponsor Us</a></div></div>
+      <div><div class="center"><a href="contact.html#ulwolves" role="button">Become a member</a></div></div>
+      <div><div class="center"><a href="contact.html#jobs" role="button">Open Positions</a></div></div>      
     </div>
-    <footer>
-        <div class="section">
-          <div style="float: left; position: absolute;">Website created with <a href="https://www.picocss.com">Pico.css</a></div>
-          <div style="padding-left:80%; position: absolute;">Created by  <a href="https://github.com/Derv6464">Dervla Gargan</a></div>
-          <div class="center">
-          <a href="https://www.instagram.com/ulaerosoc/"><i class="bi bi-instagram"></i></a>
-          <a href="https://www.linkedin.com/company/ulas-hipr/"><i class="bi bi-linkedin"></i></a>
-          </div>
-        </div>
-      </footer>
+  <footer>
+    <div class="section">
+      <div style="float: left; position: absolute;">Website created with <a href="https://www.picocss.com">Pico.css</a></div>
+      <div style="padding-left:80%; position: absolute;">Created by  <a href="https://github.com/Derv6464">Dervla Gargan</a></div>
+      <div class="center">
+      <a href="https://www.instagram.com/ulaerosoc/"><i class="bi bi-instagram"></i></a>
+      <a href="https://www.linkedin.com/company/ulas-hipr/"><i class="bi bi-linkedin"></i></a>
+      </div>
+      
+    </div>
+  </footer>
 </body>
 </html>
