--- a/about.html
+++ b/about.html
@@ -21,10 +21,34 @@
     <div class="section">
     <h2>Our Teams</h2>
     <div class="grid">
-        <div><div class="job"><div class="center"><h3>Mechanics  </h3><i class="bi bi-rocket-takeoff-fill"></i></div></div></div>
-        <div><div class="job"><div class="center"><h3>Data       </h3><i class="bi bi-code-slash"></i></div></div></div>
-        <div><div class="job"><div class="center"><h3>Electronics</h3><i class="bi bi-cpu"></i></div></div></div>
-        <div><div class="job"><div class="center"><h3>Operations </h3><i class="bi bi-tools"></i></div></div></div>
+        <div><div class="job">
+          <div class="center">
+            <i class="bi bi-rocket-takeoff-fill"></i>
+            <h5>Mechanics</h5>
+            <p>This team deals with making the rockets</p>
+          </div>
+        </div></div>
+        <div><div class="job">
+          <div class="center">
+            <i class="bi bi-code-slash"></i>
+            <h5>Data</h5>
+            <p>Analising data we get from rockets and doing similations</p>
+          </div>
+        </div></div>
+        <div><div class="job">
+          <div class="center">
+            <i class="bi bi-cpu"></i>
+            <h5>Electronics</h5>
+            <p>Making the CanSat</p>
+          </div>
+        </div></div>
+        <div><div class="job">
+          <div class="center">
+            <i class="bi bi-tools"></i>
+            <h5>Operations</h5>
+            <p>Getting sponsors, running the socials and webite</p>
+          </div>
+        </div></div>
     </div>
     </div>
     <footer>
